# openapi-gen

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: clippy.yml  rust.yml
scripts/: compile_test_cases.sh  regenerate_test_cases.sh
src/: as_status_code.rs  axum_compat.rs  fix_block_comments.rs  header.rs  lib.rs  main.rs  openapi_compat.rs  resolve_trait.rs
src/axum_compat/: api_problem_rejection.rs  build_router.rs  header.rs  into_response.rs  mod.rs
src/canonical_form/: mod.rs
src/canonical_form/impls/: bounded_integer.rs  mod.rs  numbers.rs  time.rs
src/codegen/: api_model.rs  item.rs  map.rs  media_type.rs  mod.rs  operation.rs  scalar.rs  schema.rs  set.rs  value.rs  well_known_types.rs
src/codegen/endpoint/: header.rs  mod.rs  parameter.rs  request_body.rs  response.rs  verb.rs
src/codegen/item_tree/: api_model.rs  enum_.rs  item.rs  list.rs  map.rs  mod.rs  object.rs  one_of_enum.rs  resolve_schema.rs  rust_keywords.rs  scalar.rs  set.rs  string_enum.rs  value.rs  well_known_types.rs
src/codegen/item_tree/endpoint/: mod.rs  parameter.rs  request_body.rs  response.rs  verb.rs
src/codegen/value/: list.rs  map.rs  mod.rs  object.rs  one_of_enum.rs  property_override.rs  scalar.rs  set.rs  string_enum.rs
src/openapi_compat/: mod.rs  or_scalar.rs
src/serialization_helpers/: date_as_string.rs  mod.rs
src/well_known_types/: binary.rs  bytes.rs  mod.rs
tests/: test_examples.rs
tests/cases/18_response_value/: definition.yaml  expect.rs
tests/cases/24_headers/: definition.yaml  expect.rs
tests/cases/25_multiple_response_types/: definition.yaml  expect.rs
tests/cases/31_query_handler/: definition.yaml  expect.rs
tests/cases/allof_singleton/: definition.yaml  expect.rs
tests/cases/basic_struct/: definition.yaml  expect.rs
tests/cases/deduplicate_options_in_query_params/: definition.yaml  expect.rs
tests/cases/fancy_types/: definition.yaml  expect.rs
tests/cases/item_ref/: definition.yaml  expect.rs
tests/cases/kinds_of_nullability/: definition.yaml  expect.rs
tests/cases/member_rename/: definition.yaml  expect.rs
tests/cases/model_more_types/: definition.yaml  expect.rs
tests/cases/model_type_definitions/: definition.yaml  expect.rs
tests/cases/request_enum/: definition.yaml  expect.rs
tests/cases/response_enum/: definition.yaml  expect.rs
tests/cases/trait_api/: definition.yaml  expect.rs
tests/cases/well_known_type/: definition.yaml  expect.rs
tests/cases/x_extensible_enum/: definition.yaml  expect.rs
