[package]
name = "openapi-gen"
version = "0.1.0"
edition = "2021"
default-run = "openapi-gen"
build = "build.rs"

[dependencies]
accept-header = { version = "0.1.0", git = "https://github.com/coriolinus/accept-header.git" }
anyhow = { version = "1.0.71" }
async-trait = "0.1.68"
axum = { version = "0.6.20", optional = true, features = ["headers"] }
base64 = { version = "0.21.0", optional = true }
bounded-integer = { version = "0.5.6", features = ["std", "types", "serde1", "num-traits02"], optional = true }
clap = { version = "4.2.7", features = ["derive"], optional = true }
derive_more = "0.99.17"
headers = { version = "0.3.8", optional = true }
heck = "0.4.1"
http = "0.2.9"
http-api-problem = { version = "0.57.0", optional = true }
indexmap = "1.9.3"
md-5 = "0.10.5"
mime = "0.3.17"
openapiv3 = { version = "2.2.1", package = "openapiv3-extended" }
prettyplease = "0.2.4"
proc-macro2 = "1.0.56"
quote = "1.0.27"
regress = { version = "0.6.0", optional = true }
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0.163", features = ["derive"] }
serde-enum-str = "0.4.0"
serde_json = "1.0.96"
serde_with = { version = "3.2.0" }
serde_yaml = { version = "0.9.21", optional = true }
strum = { version = "0.25.0", features = ["derive"] }
syn = "2.0.15"
thiserror = "1.0.47"
time = { version = "0.3.21", features = ["formatting", "parsing", "macros", "serde"] }
uuid = { version = "1.3.2", features = ["fast-rng", "serde", "v4"], optional = true }

[dev-dependencies]
atty = "0.2.14"
serde_yaml = { version = "0.9.21", optional = false }
similar = "2.2.1"
syn = { version = "2.0.15", features = ["extra-traits"] }
termcolor = "1.2.0"

[features]
default = []
api-problem = ["http-api-problem"]
axum-support = ["axum", "headers"]
cli = ["clap", "serde_yaml"]
bytes = ["base64"]
integer-restrictions = ["bounded-integer"]
scripts = ["cli"]
string-pattern = ["regress"]

[[bin]]
name = "openapi-gen"
required-features = ["cli"]

[build-dependencies]
vergen = { version = "8.2.4", features = ["git", "gitcl"] }
