[package]
name = "openapi-gen"
version = "0.1.0"
edition = "2021"
default-run = "openapi-gen"
build = "build.rs"

[dependencies]
accept-header = { version = "0.1.0", git = "https://github.com/coriolinus/accept-header.git" }
anyhow = { version = "1.0.75" }
async-trait = "0.1.74"
axum = { version = "0.7.2", optional = true }
axum-extra = { version = "0.9.0", optional = true, features = ["typed-header"] }
base64 = { version = "0.21.5", optional = true }
bounded-integer = { version = "0.5.7", features = ["std", "types", "serde1", "num-traits02"], optional = true }
clap = { version = "4.4.11", features = ["derive"], optional = true }
derive_more = "0.99.17"
headers = { version = "0.4.0", optional = true }
heck = "0.4.1"
http = "1.0.0"
# temporary git override; see https://github.com/chridou/http-api-problem/pull/50
http-api-problem = { version = "0.58.0", optional = true, features = ["axum"], git = "https://github.com/coriolinus/http-api-problem", branch = "upgrade-http-and-axum" }
indexmap = "1.9.3"
md-5 = "0.10.6"
mime = "0.3.17"
openapiv3 = { version = "2.2.1", package = "openapiv3-extended" }
prettyplease = "0.2.15"
proc-macro2 = "1.0.70"
quote = "1.0.33"
regress = { version = "0.7.1", optional = true }
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = { version = "1.0.193", features = ["derive"] }
serde-enum-str = "0.4.0"
serde_json = "1.0.108"
serde_with = { version = "3.4.0", features = ["macros", "time_0_3"] }
serde_yaml = { version = "0.9.27", optional = true }
strum = { version = "0.25.0", features = ["derive"] }
syn = "2.0.41"
thiserror = "1.0.50"
time = { version = "0.3.30", features = ["formatting", "parsing", "macros", "serde"] }
uuid = { version = "1.6.1", features = ["fast-rng", "serde", "v4"], optional = true }

[dev-dependencies]
serde_yaml = { version = "0.9.27", optional = false }
similar = "2.3.0"
syn = { version = "2.0.41", features = ["extra-traits"] }
termcolor = "1.4.0"

[build-dependencies]
vergen = { version = "8.2.6", features = ["git", "gitcl"] }

[features]
default = []
api-problem = ["axum-extra", "http-api-problem"]
axum-support = ["axum", "headers"]
cli = ["clap", "serde_yaml"]
bytes = ["base64"]
integer-restrictions = ["bounded-integer"]
scripts = ["cli"]
string-pattern = ["regress"]

[[bin]]
name = "openapi-gen"
required-features = ["cli"]

[[bin]]
name = "fix-block-comments"
required-features = ["clap"]
